@@ -4,7 +4,6 @@ using System.Windows;
 using System.Diagnostics;
 using System.Windows.Controls;
 using System.IO;
-using System.Windows.Navigation;
 
 namespace DuplicateFileTool
 {
@@ -31,7 +30,7 @@ namespace DuplicateFileTool
 
         private void OnOpenWithDefaultApp(object sender, System.Windows.Input.MouseButtonEventArgs eventArgs)
         {
-            if (eventArgs.Source is ContentControl contentControl && contentControl.DataContext is DuplicateFile duplicateFile && File.Exists(duplicateFile.FileFullName))
+            if (eventArgs.Source is ContentControl { DataContext: DuplicateFile duplicateFile } && File.Exists(duplicateFile.FileFullName))
                 Process.Start("explorer.exe", $"\"{duplicateFile.FileFullName}\"");
         }
     }
